--- a/Empire Burguer/css/horarios/horarios.css
+++ b/Empire Burguer/css/horarios/horarios.css
@@ -37,8 +37,8 @@
     display: block;
     justify-items: center;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     z-index: 0;
     left: 40px;
     top: 30px;
